--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
-name = "python-template"
+name = "animal-crossing-music-bot"
 version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
-python = ">=3.10.0,<3.11"
+python = ">=3.10.0,<3.12"
 numpy = "^1.22.2"
 replit = "^3.2.4"
 Flask = "^2.2.0"
@@ -15,6 +15,8 @@ PyNaCl = "1.5.0"
 discord = "^2.2.2"
 pafy = "^0.5.5"
 ffmpeg = "1.4"
+opuslib = "^3.0.1"
+python-dotenv = "^1.0.0"
 
 [tool.poetry.dev-dependencies]
 debugpy = "^1.6.2"
